--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "ThoughtWorks Hyderabad",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "storybook": "start-storybook -p 9001"
   },
   "repository": {
     "type": "git",
@@ -18,5 +18,12 @@
   "bugs": {
     "url": "https://github.com/twhyderabad/twhyderabad.github.io/issues"
   },
-  "homepage": "https://github.com/twhyderabad/twhyderabad.github.io#readme"
+  "homepage": "https://github.com/twhyderabad/twhyderabad.github.io#readme",
+  "devDependencies": {
+    "@open-wc/storybook": "^0.2.7",
+    "@storybook/polymer": "^4.1.11"
+  },
+  "dependencies": {
+    "lit-html": "0.10.0"
+  }
 }
